--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>stdrice</title>
+        <title>zein</title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <style>
             body {
@@ -50,19 +50,13 @@
                 text-align: center;
                 font-size: 14px;
             }
-            #album-art {
-                border-radius: 50%;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-            }
         </style>
     </head>
 
     <body>
         <p>
-            <i>s t d r i c e</i>
+            <i>z e i n</i>
             <br>
-            <br>
-            <img id="album-art" src="placeholder.png" width="300px" height="300px" onerror="this.src='assets/images/1.png'">
             <br>
         </p>
 
@@ -99,32 +93,7 @@
         </section>
 
         <footer class="footer">
-            <p>&copy; 2025 stdrice. All rights reserved.</p>
+            <p></p>
         </footer>
-
-        <script>
-            async function fetchLastPlayedSong() {
-                const username = 'p3nguin-kun';
-                const apiKey = '731cd3d44373636d778c07f281813808'; // please dont make any unauthorized usage with my api ;-;
-                const url = `https://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=${username}&api_key=${apiKey}&format=json`;
-                
-                try {
-                    const response = await fetch(url);
-                    const data = await response.json();
-                    const track = data.recenttracks.track[0];
-                
-                    // Update HTML
-                    document.getElementById('album-art').src = track.image[3]['#text'] || 'placeholder.png';
-                } catch (error) {
-                    console.error('Error fetching song data:', error);
-                }
-            }
-
-            // Fetch song data on load
-            fetchLastPlayedSong();
-
-            // Optionally refresh every 60 seconds
-            setInterval(fetchLastPlayedSong, 60000);
-        </script>
     </body>
 </html>
