--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 text-align: center; 
             }
             a {
-                color: #4CAF50;
+                color: #808080; /* Changed green text to gray */
                 text-decoration: none;
             }
             .content-section {
@@ -80,15 +80,6 @@
                 <li><a href="#">Blog 1</a> - A short intro to the blog post.</li>
                 <li><a href="#">Blog 2</a> - A short intro to the blog post.</li>
                 <li><a href="#">Blog 3</a> - A short intro to the blog post.</li>
-            </ul>
-        </section>
-
-        <section class="content-section">
-            <h2>Webrings</h2>
-            <ul>
-                <li><a href="#">Webring 1</a> - Description of Webring 1.</li>
-                <li><a href="#">Webring 2</a> - Description of Webring 2.</li>
-                <li><a href="#">Webring 3</a> - Description of Webring 3.</li>
             </ul>
         </section>
 
