--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 text-align: center; 
             }
             a {
-                color: #808080; /* Changed green text to gray */
+                color: #808080;
                 text-decoration: none;
             }
             .content-section {
@@ -50,6 +50,11 @@
                 text-align: center;
                 font-size: 14px;
             }
+            #album-art {
+                border-radius: 50%;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+                transition: all 1s ease;
+            }
         </style>
     </head>
 
@@ -57,6 +62,8 @@
         <p>
             <i>z e i n</i>
             <br>
+            <br>
+            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg" width="300px" height="300px" onerror="this.src='assets/images/1.png'">
             <br>
         </p>
 
@@ -86,5 +93,24 @@
         <footer class="footer">
             <p></p>
         </footer>
+
+        <script>
+            let currentImage = 0; // Start with the first image
+            const images = [
+                "https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg", // First image
+                "https://i.pinimg.com/736x/30/7f/28/307f28166ae0a40ff663aa9a3bf28502.jpg"  // Second image
+            ];
+
+            function changeImage() {
+                currentImage = (currentImage + 1) % images.length; // Toggle between 0 and 1
+                document.getElementById("album-art").src = images[currentImage];
+            }
+
+            // Change image every hour (60 minutes * 60 seconds * 1000 milliseconds)
+            setInterval(changeImage, 60 * 60 * 1000);
+
+            // Initially set the first image
+            changeImage();
+        </script>
     </body>
 </html>
