--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
         <title>zein</title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <style>
+            /* Body styling to center everything */
             body {
                 max-width: 100em; 
                 width: 100%; 
-                height: 100%; 
-                position: absolute; 
-                display: table; 
+                height: 100vh; /* Full height */
+                display: flex; /* Flexbox for centering */
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
                 background-color: #000;
                 color: white;
+                margin: 0; /* Remove default margin */
             }
+
             p {
-                display: table-cell; 
-                vertical-align: middle; 
-                text-align: center; 
+                text-align: center;
+                font-size: 2em;
             }
+
             a {
                 color: #808080;
                 text-decoration: none;
             }
+
             .content-section {
                 background-color: #222;
                 padding: 20px;
@@ -30,17 +36,21 @@
                 border-radius: 8px;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
             }
+
             .content-section h2 {
                 font-size: 28px;
                 margin-bottom: 15px;
             }
+
             .content-section ul {
                 list-style-type: none;
                 padding: 0;
             }
+
             .content-section ul li {
                 margin: 10px 0;
             }
+
             .footer {
                 position: absolute;
                 bottom: 0;
@@ -50,10 +60,14 @@
                 text-align: center;
                 font-size: 14px;
             }
+
             #album-art {
-                border-radius: 50%;
+                width: 300px; /* Make image square */
+                height: 300px; /* Make image square */
+                border-radius: 8px; /* Optional: rounded corners */
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
                 transition: all 1s ease;
+                margin-bottom: 20px; /* Space between image and text */
             }
         </style>
     </head>
@@ -63,7 +77,7 @@
             <i>z e i n</i>
             <br>
             <br>
-            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg" width="300px" height="300px" onerror="this.src='assets/images/1.png'">
+            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg" onerror="this.src='assets/images/1.png'">
             <br>
         </p>
 
