--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
         <title>zein</title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <style>
-            /* Body styling to position content with a little margin from the top */
             body {
                 max-width: 100em; 
                 width: 100%; 
-                height: 100vh; /* Full height */
-                display: flex; /* Flexbox for centering content horizontally */
-                flex-direction: column;
-                justify-content: flex-start; /* Align items to the top */
-                align-items: center; /* Center items horizontally */
+                height: 100%; 
+                position: absolute; 
+                display: table; 
                 background-color: #000;
                 color: white;
-                margin: 0; /* Remove default margin */
-                padding-top: 50px; /* Adjust this to move content down from the top */
             }
 
             p {
-                text-align: center;
-                font-size: 2em;
+                display: table-cell; 
+                vertical-align: middle; 
+                text-align: center; 
             }
 
             a {
@@ -62,13 +58,13 @@
                 font-size: 14px;
             }
 
+            /* Square image style */
             #album-art {
                 width: 300px; /* Make image square */
                 height: 300px; /* Make image square */
                 border-radius: 8px; /* Optional: rounded corners */
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
                 transition: all 1s ease;
-                margin-bottom: 20px; /* Space between image and text */
             }
         </style>
     </head>
