--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
             </ul>
         </section>
 
+        <!-- New section added here -->
+        <section class="content-section">
+            <h2>Gallery</h2>
+            <ul>
+                <li><a href="#">Image 1</a> - Description of image 1.</li>
+                <li><a href="#">Image 2</a> - Description of image 2.</li>
+                <li><a href="#">Image 3</a> - Description of image 3.</li>
+            </ul>
+        </section>
+
         <footer class="footer">
             <p></p>
         </footer>
