--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         </p>
 
         <section class="content-section">
-            <h2>About</h2>
-            <p>Welcome to my personal page. I'm passionate about web development, technology, and design. I create projects, write blogs, and enjoy being part of web communities.</p>
+            <h2>Introduction</h2>
+            <p>Welcome to my personal page. Im Khoi but you can also call me zein thats my display name </p>
+            <p>Im cool </p>
         </section>
 
         <section class="content-section">
