--- a/index.html
+++ b/index.html
@@ -80,35 +80,36 @@
 
         <section class="content-section">
             <h2>Introduction</h2>
-            <p>Welcome to my personal page. Im Khoi but you can also call me zein thats my display name </p>
-            <p>Im cool </p>
+            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears and im interested in fps game like apex leend , cs2 , valorant , iron sight , halo
+
+</p>
         </section>
 
         <section class="content-section">
-            <h2>Projects</h2>
+            <h2>Interests</h2>
             <ul>
-                <li><a href="#">Project 1</a> - A brief description of Project 1.</li>
-                <li><a href="#">Project 2</a> - A brief description of Project 2.</li>
-                <li><a href="#">Project 3</a> - A brief description of Project 3.</li>
+                <li><a href="#">Music</a> - Tyler The Creator, 21 Savage, Hisohkah, Juice WRLD, Ken Carson, Von, Lil Uzi Vert, Lil Tecca, Playboi carti and much much artist/vietnamese too.</li>
+                <li><a href="#">Anime/Manga</a> - Bleach, Vinland Saga, Vagabond, Jujutsukaisen, A Silent Voice, 20th Century Boys, Kamisama Kiss, Evangelion, Tokyo Ghoul,....</li>
+                <li><a href="#">Games</a> - osu!, Apex Legend, Valorant, csgo/cs2, iron sight, roblox, The finals, Aimlabs, Halo, Destiny 2, team fortress 2,....</li>
             </ul>
         </section>
 
         <section class="content-section">
             <h2>Blogs</h2>
             <ul>
-                <li><a href="#">Blog 1</a> - A short intro to the blog post.</li>
-                <li><a href="#">Blog 2</a> - A short intro to the blog post.</li>
-                <li><a href="#">Blog 3</a> - A short intro to the blog post.</li>
+                <li><a href="#">Browser guide</a> - https://github.com/zein240px/browser-guide.</li>
+                <li><a href="#">Site guide/a> - https://github.com/zein240px/site-guide.</li>
+                <li><a href="#">Design for newbie</a> -https://github.com/zein240px/Pages.</li>
             </ul>
         </section>
 
         <!-- New section added here -->
         <section class="content-section">
-            <h2>Gallery</h2>
+            <h2>Social</h2>
             <ul>
-                <li><a href="#">Image 1</a> - Description of image 1.</li>
-                <li><a href="#">Image 2</a> - Description of image 2.</li>
-                <li><a href="#">Image 3</a> - Description of image 3.</li>
+                <li><a href="#">Facebook</a> - https://www.facebook.com/profile.php?id=100092310412433.</li>
+                <li><a href="#">Reddit</a> - https://www.reddit.com/user/Ok_Lengthiness_9580/.</li>
+                <li><a href="#">Twitter/X</a> - https://x.com/Dkhoi09.</li>
             </ul>
         </section>
 
