--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <section class="content-section">
             <h2>Interests</h2>
             <ul>
-                <li><a href="#">Music</a> - Tyler The Creator, 21 Savage, Hisohkah, Juice WRLD, Ken Carson, Von, Lil Uzi Vert, Lil Tecca, Playboi carti and much much artist/vietnamese too.</li>
-                <li><a href="#">Anime/Manga</a> - Bleach, Vinland Saga, Vagabond, Jujutsukaisen, A Silent Voice, 20th Century Boys, Kamisama Kiss, Evangelion, Tokyo Ghoul,....</li>
-                <li><a href="#">Games</a> - osu!, Apex Legend, Valorant, csgo/cs2, iron sight, roblox, The finals, Aimlabs, Halo, Destiny 2, team fortress 2,....</li>
+                <li><a href="#">Music</a> -  Tyler The Creator, 21 Savage, Hisohkah, Juice WRLD, Ken Carson, Von, Lil Uzi Vert, Lil Tecca, Playboi carti and much much artist/vietnamese too.</li>
+                <li><a href="#">Anime/Manga</a> -  Bleach, Vinland Saga, Vagabond, Jujutsukaisen, A Silent Voice, 20th Century Boys, Kamisama Kiss, Evangelion, Tokyo Ghoul,....</li>
+                <li><a href="#">Games</a> -  osu!, Apex Legend, Valorant, csgo/cs2, iron sight, roblox, The finals, Aimlabs, Halo, Destiny 2, team fortress 2,....</li>
             </ul>
         </section>
 
@@ -98,7 +98,7 @@
             <h2>Blogs</h2>
             <ul>
                 <li><a href="#">Browser guide</a> - https://github.com/zein240px/browser-guide.</li>
-                <li><a href="#">Site guide/a> - https://github.com/zein240px/site-guide.</li>
+                <li><a href="#">Site guide</a> - https://github.com/zein240px/site-guide.</li>
                 <li><a href="#">Design for newbie</a> -https://github.com/zein240px/Pages.</li>
             </ul>
         </section>
