--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <i>z e i n</i>
             <br>
             <br>
-            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg" onerror="this.src='assets/images/1.png'">
+            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg'">
             <br>
         </p>
 
