--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         <script>
             let currentImage = 0; // Start with the first image
             const images = [
-                "https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg", // First image
-                "https://i.pinimg.com/736x/30/7f/28/307f28166ae0a40ff663aa9a3bf28502.jpg"  // Second image
+                "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWJxa3BnaGN4NHh5N2M1ZmJxc2dtcTBkNzUzNjBzeWczMXVrZTM3aSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/lPCbQV5IcUt7JnucpP/giphy.gif", // First image
+                "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWJxa3BnaGN4NHh5N2M1ZmJxc2dtcTBkNzUzNjBzeWczMXVrZTM3aSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/lPCbQV5IcUt7JnucpP/giphy.gif"  // Second image
             ];
 
             function changeImage() {
