--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>zein</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+
+        <!-- Add favicon here -->
+        <link rel="icon" href="https://i.pinimg.com/736x/4e/f2/ad/4ef2ad25830806c6406f7b2a40bb201c.jpg" type="image/jpeg">
+
         <style>
             body {
                 max-width: 100em; 
@@ -74,15 +78,13 @@
             <i>z e i n</i>
             <br>
             <br>
-            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg'">
+            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg">
             <br>
         </p>
 
         <section class="content-section">
             <h2>Introduction</h2>
-            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears and im interested in fps game like apex leend , cs2 , valorant , iron sight , halo
-
-</p>
+            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears and im interested in fps game like apex leend , cs2 , valorant , iron sight , halo</p>
         </section>
 
         <section class="content-section">
