--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
         </section>
 
         <!-- New section added here -->
-        <section class="content-section">
-            <h2>Social</h2>
-            <ul>
-                <li><a href="#">Facebook</a> - https://www.facebook.com/profile.php?id=100092310412433.</li>
-                <li><a href="#">Reddit</a> - https://www.reddit.com/user/Ok_Lengthiness_9580/.</li>
-                <li><a href="#">Twitter/X</a> - https://x.com/Dkhoi09.</li>
-            </ul>
-        </section>
+<section class="content-section">
+    <h2>Social</h2>
+    <ul>
+        <li><a href="https://www.facebook.com/profile.php?id=100092310412433" target="_blank">Facebook</a> - https://www.facebook.com/profile.php?id=100092310412433</li>
+        <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/" target="_blank">Reddit</a> - https://www.reddit.com/user/Ok_Lengthiness_9580/</li>
+        <li><a href="https://x.com/Dkhoi09" target="_blank">Twitter/X</a> - https://x.com/Dkhoi09</li>
+    </ul>
+</section>
 
         <footer class="footer">
             <p></p>
