--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>zein</title>
         <link rel="stylesheet" href="style.css" type="text/css">
+
+        <!-- Add favicon here -->
+        <link rel="icon" href="https://i.pinimg.com/736x/4e/f2/ad/4ef2ad25830806c6406f7b2a40bb201c.jpg" type="image/jpeg">
+
         <style>
             body {
                 max-width: 100em; 
@@ -74,21 +78,21 @@
             <i>z e i n</i>
             <br>
             <br>
-            <img id="album-art" src="https://i.pinimg.com/736x/b0/21/da/b021da245208fd68981e124a0dacd8e3.jpg">
+            <img id="album-art" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif">
             <br>
         </p>
 
         <section class="content-section">
             <h2>Introduction</h2>
-            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears and I'm interested in FPS games like Apex Legends, CS2, Valorant, Iron Sight, and Halo.</p>
+            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears and im interested in fps game like apex leend , cs2 , valorant , iron sight , halo</p>
         </section>
 
         <section class="content-section">
             <h2>Interests</h2>
             <ul>
-                <li><a href="#">Music</a> - Tyler The Creator, 21 Savage, Hisohkah, Juice WRLD, Ken Carson, Von, Lil Uzi Vert, Lil Tecca, Playboi Carti, and many more artists, including Vietnamese ones.</li>
-                <li><a href="#">Anime/Manga</a> - Bleach, Vinland Saga, Vagabond, Jujutsu Kaisen, A Silent Voice, 20th Century Boys, Kamisama Kiss, Evangelion, Tokyo Ghoul, and more.</li>
-                <li><a href="#">Games</a> - osu!, Apex Legends, Valorant, CS:GO/CS2, Iron Sight, Roblox, The Finals, Aimlabs, Halo, Destiny 2, Team Fortress 2, and more.</li>
+                <li><a href="#">Music</a> - Tyler The Creator, 21 Savage, Hisohkah, Juice WRLD, Ken Carson, Von, Lil Uzi Vert, Lil Tecca, Playboi carti and much much artist/vietnamese too.</li>
+                <li><a href="#">Anime/Manga</a> - Bleach, Vinland Saga, Vagabond, Jujutsukaisen, A Silent Voice, 20th Century Boys, Kamisama Kiss, Evangelion, Tokyo Ghoul,....</li>
+                <li><a href="#">Games</a> - osu!, Apex Legend, Valorant, csgo/cs2, iron sight, roblox, The finals, Aimlabs, Halo, Destiny 2, team fortress 2,....</li>
             </ul>
         </section>
 
@@ -97,17 +101,17 @@
             <ul>
                 <li><a href="#">Browser guide</a> - https://github.com/zein240px/browser-guide.</li>
                 <li><a href="#">Site guide</a> - https://github.com/zein240px/site-guide.</li>
-                <li><a href="#">Design for newbies</a> - https://github.com/zein240px/Pages.</li>
+                <li><a href="#">Design for newbie</a> -https://github.com/zein240px/Pages.</li>
             </ul>
         </section>
 
-        <!-- New social media section -->
+        <!-- New section added here -->
         <section class="content-section">
             <h2>Social</h2>
             <ul>
-                <li><a href="https://www.facebook.com/profile.php?id=100092310412433" target="_blank">Facebook</a> - https://www.facebook.com/profile.php?id=100092310412433</li>
-                <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/" target="_blank">Reddit</a> - https://www.reddit.com/user/Ok_Lengthiness_9580/</li>
-                <li><a href="https://x.com/Dkhoi09" target="_blank">Twitter/X</a> - https://x.com/Dkhoi09</li>
+                <li><a href="#">Facebook</a> - https://www.facebook.com/profile.php?id=100092310412433.</li>
+                <li><a href="#">Reddit</a> - https://www.reddit.com/user/Ok_Lengthiness_9580/.</li>
+                <li><a href="#">Twitter/X</a> - https://x.com/Dkhoi09.</li>
             </ul>
         </section>
 
