--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <section class="content-section">
             <h2>Introduction</h2>
-            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears and im interested in fps game like apex leend , cs2 , valorant , iron sight , halo</p>
+            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears </p>
         </section>
 
         <section class="content-section">
@@ -97,11 +97,11 @@
         </section>
 
         <section class="content-section">
-            <h2>Blogs</h2>
+            <h2>Project</h2>
             <ul>
-                <li><a href="#">Browser guide</a> - https://github.com/zein240px/browser-guide.</li>
-                <li><a href="#">Site guide</a> - https://github.com/zein240px/site-guide.</li>
-                <li><a href="#">Design for newbie</a> -https://github.com/zein240px/Pages.</li>
+                <li><a href="https://github.com/zein240px/browser-guide">Browser guide</a>
+                <li><a href="https://github.com/zein240px/site-guide">Site guide</a>
+                <li><a href="https://github.com/zein240px/Pages">Design for newbie</a>
             </ul>
         </section>
 
@@ -109,9 +109,9 @@
         <section class="content-section">
             <h2>Social</h2>
             <ul>
-                <li><a href="#">Facebook</a> - https://www.facebook.com/profile.php?id=100092310412433.</li>
-                <li><a href="#">Reddit</a> - https://www.reddit.com/user/Ok_Lengthiness_9580/.</li>
-                <li><a href="#">Twitter/X</a> - https://x.com/Dkhoi09.</li>
+                <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a>
+                <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>
+                <li><a href="https://x.com/Dkhoi09">Twitter</a>
             </ul>
         </section>
 
