--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <i>z e i n</i>
             <br>
             <br>
-            <img id="album-art" src="https://cdn.discordapp.com/attachments/1329075455755685898/1344954384143880232/image.png?ex=67c2c9e1&is=67c17861&hm=79947431688fda9650a585af60f1c76d0ac3a66fa10e12d0257f3c646af6b0c2">
+            <img id="album-art" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif">
             <br>
         </p>
 
@@ -99,9 +99,9 @@
         <section class="content-section">
             <h2>Project</h2>
             <ul>
-                <li><a href="https://github.com/zein240px/browser-guide">Browser guide</a>
-                <li><a href="https://github.com/zein240px/site-guide">Site guide</a>
-                <li><a href="https://github.com/zein240px/Pages">Design for newbie</a>
+                <li><a href="https://github.com/zein240px/browser-guide">Browser guide - provide tips for beginner </a>
+                <li><a href="https://github.com/zein240px/site-guide">Site guide - how to make a website</a>
+                <li><a href="https://github.com/zein240px/Pages">Design for beginner - design github website for beginner </a>
             </ul>
         </section>
 
@@ -122,8 +122,8 @@
         <script>
             let currentImage = 0; // Start with the first image
             const images = [
-                "https://cdn.discordapp.com/attachments/1329075455755685898/1344954384143880232/image.png?ex=67c2c9e1&is=67c17861&hm=79947431688fda9650a585af60f1c76d0ac3a66fa10e12d0257f3c646af6b0c2&", // First image
-                "https://cdn.discordapp.com/attachments/1329075455755685898/1344954384143880232/image.png?ex=67c2c9e1&is=67c17861&hm=79947431688fda9650a585af60f1c76d0ac3a66fa10e12d0257f3c646af6b0c2&"  // Second image
+                "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif", // First image
+                "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif"  // Second image
             ];
 
             function changeImage() {
