--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
         <title>zein</title>
         <link rel="stylesheet" href="style.css" type="text/css">
 
-        <!-- Add favicon here -->
-        <link rel="icon" href="https://i.pinimg.com/736x/4e/dd/4e/4edd4eb745e47bc4fbf016cfbaafe0ef.jpg" type="image/jpeg">
-
         <style>
             body {
                 max-width: 100em; 
@@ -84,15 +81,20 @@
 
         <section class="content-section">
             <h2>Introduction</h2>
-            <p>Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears </p>
+            <p>- Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears </p>
         </section>
 
         <section class="content-section">
-            <h2>Interests</h2>
+            <h2>Where to find me ?</h2>
+            <p>You can contact me using any services below</p>
             <ul>
-                <li><a href="#">Music</a> - Tyler The Creator, 21 Savage, Hisohkah, Juice WRLD, Ken Carson, Von, Lil Uzi Vert, Lil Tecca, Playboi carti and much much artist/vietnamese too.</li>
-                <li><a href="#">Anime/Manga</a> - Bleach, Vinland Saga, Vagabond, Jujutsukaisen, A Silent Voice, 20th Century Boys, Kamisama Kiss, Evangelion, Tokyo Ghoul,....</li>
-                <li><a href="#">Games</a> - osu!, Apex Legend, Valorant, csgo/cs2, iron sight, roblox, The finals, Aimlabs, Halo, Destiny 2, team fortress 2,....</li>
+                <li>My email address is khoibread.@gmail.com</li>
+                <li>My Discord username is <code>hardzeic</code></li></li>
+            <p>I also online on these platforms</p>
+                <li><a href="https://x.com/Dkhoi09">X</a>: surf to relieve boredom</li>
+                <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>: surf to relieve boredom</li>
+                <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
+                <li><a href="https://github.com/zein240px">github</a>: to work on my personal project</li>
             </ul>
         </section>
 
