--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
             <h2>Where to find me ?</h2>
             <p>You can contact me using any services below</p>
             <ul>
-                - <li>My email address is khoibread.@gmail.com</li>
-                - <li>My Discord username is <code>hardzeic</code></li></li>
+                <li>- My email address is khoibread.@gmail.com</li>
+                <li>- My Discord username is <code>hardzeic</code></li></li>
             <p>I also online on these platforms</p>
-                - <li><a href="https://x.com/Dkhoi09">X</a>: surf to relieve boredom</li>
-                - <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>: surf to relieve boredom</li>
-                - <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
-                - <li><a href="https://github.com/zein240px">github</a>: to work on my personal project</li>
+                <li>- <a href="https://x.com/Dkhoi09">X</a>: surf to relieve boredom</li>
+                <li>- <a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>: surf to relieve boredom</li>
+                <li>- <a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
+                <li>- <a href="https://github.com/zein240px">github</a>: to work on my personal project</li>
             </ul>
         </section>
 
@@ -103,7 +103,7 @@
             <ul>
                 <li><a href="https://github.com/zein240px/browser-guide">Browser guide - provide tips for beginner </a>
                 <li><a href="https://github.com/zein240px/site-guide">Site guide - how to make a website</a>
-                <li><a href="https://github.com/zein240px/Pages">Design for beginner - design github website for beginner </a>
+                <li><a href="https://github.com/zein240px/Pages">Design for beginner - design github website for beginner </a> 
             </ul>
         </section>
 
