--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
                 <li>  - My email address is khoibread.@gmail.com</li>
                 <li>  - My Discord username is <code>hardzeic</code></li></li>
             <p>I also online on these platforms</p>
-                <li>  - <a href="https://x.com/Dkhoi09">X</a>: surf to relieve boredom</li>
-                <li>  - <a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>: surf to relieve boredom</li>
-                <li>  - <a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
-                <li>  - <a href="https://github.com/zein240px">github</a>: to work on my personal project</li>
+                <ul style="list-type-style:circle">
+                <li>1</li>
+                <li>- <a href="https://x.com/Dkhoi09">X</a>: surf to relieve boredom</li>
+                <li>- <a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>: surf to relieve boredom</li>
+                <li>- <a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
+                <li>- <a href="https://github.com/zein240px">github</a>: to work on my personal project</li>
             </ul>
         </section>
 
