--- a/index.html
+++ b/index.html
@@ -2,142 +2,67 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>zein</title>
+        <title>about me</title>
         <link rel="stylesheet" href="style.css" type="text/css">
-
-        <style>
-            body {
-                max-width: 100em; 
-                width: 100%; 
-                height: 100%; 
-                position: absolute; 
-                display: table; 
-                background-color: #000;
-                color: white;
-            }
-
-            p {
-                display: table-cell; 
-                vertical-align: middle; 
-                text-align: center; 
-            }
-
-            a {
-                color: #808080;
-                text-decoration: none;
-            }
-
-            .content-section {
-                background-color: #222;
-                padding: 20px;
-                margin: 20px;
-                border-radius: 8px;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
-            }
-
-            .content-section h2 {
-                font-size: 28px;
-                margin-bottom: 15px;
-            }
-
-            .content-section ul {
-                list-style-type: none;
-                padding: 0;
-            }
-
-            .content-section ul li {
-                margin: 10px 0;
-            }
-
-            .footer {
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                background-color: #333;
-                padding: 10px;
-                text-align: center;
-                font-size: 14px;
-            }
-
-            /* Square image style */
-            #album-art {
-                width: 300px; /* Make image square */
-                height: 300px; /* Make image square */
-                border-radius: 8px; /* Optional: rounded corners */
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-                transition: all 1s ease;
-            }
-        </style>
     </head>
 
     <body>
-        <p>
-            <i>z e i n</i>
-            <br>
-            <br>
-            <img id="album-art" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif">
-            <br>
-        </p>
+        <h1>Introduction</h1>
+        <ul>
+            <li>Hi! My name is <i>stdrice</i>. I'm a high school student, technically a <a href="https://i.imgur.com/Y6lAwVK.png">tech (or newborn) paranoid</a>/digital minimalist, otaku(?).</li>
+            <li>I love wandering around the Internet, listening to music, photo/lomography, tinkering tech stuffs, anime, manga, Japanese culture, etc.</li>
+            <li>My mother tongue is Vietnamese, but I can also use English.</li>
+            <li>I'm not addicted to video games anymore, but before, I played lots of different games. I have played video games since first time I used a computer (3yo). The first game I played was Counter Strike, it's still one of my favorite games.</li>
+            <li>I listen to multiple genres of music, but mostly (lofi) hip-hop, (indie/pop/alt) rock and some subgenres of electronic music.</li>
+            <li>I don't use social media because I'm concerned about privacy, and the knowledge I learned from social media is very small. Someone once told me I was an ape for not using social media.</li>
+        </ul>
 
-        <section class="content-section">
-            <h2>Introduction</h2>
-            <p>- Hi, I'm Khoi (you can call me Zein). I'm from Vietnam and can use English 24/7. I'm a secondary school student passionate about coding, scripting, and technology. I also enjoy gaming and love exploring new gaming gears </p>
-        </section>
+        <h1>Where to find me?</h1>
+        <p>You can contact me using any services below:</p>
+        <ul>
+            <li>My email address is <a href="mailto:stdrice@disroot.org">stdrice (at) disroot.org</a></li>
+            <li>My Discord username is <code>stdrice_</code></li>
+        </ul>
+        <p>I'm also available on some platforms:</p>
+        <ul>
+            <li><a href="https://codeberg.org/stdrice">Codeberg</a>: to host my (personal) projects</li>
+            <li><a href="https://anilist.co/user/stdrice">Anilist</a>: to track my anime/manga list</li>
+        </ul>
 
-        <section class="content-section">
-            <h2>Where to find me ?</h2>
-            <p>You can contact me using any services below</p>
-            <ul>
-                <li>• My email address is khoibread.@gmail.com</li>
-                <li>• My Discord username is <code>hardzeic</code></li></li>
-            <p>I also online on these platforms</p>
-                <li>• <a href="https://x.com/Dkhoi09">X</a>: surf to relieve boredom</li>
-                <li>• <a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>: surf to relieve boredom</li>
-                <li>• <a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
-                <li>• <a href="https://github.com/zein240px">github</a>: to work on my personal project</li>
-            </ul>
-        </section>
+        <h1>Interests</h1>
+        <ul>
+            <li><b>Music</b>: Arctic Monkeys, Tame Impala, Nujabes, Tyler, the Creator, MF DOOM/Madvillain, Daft Punk, Lamp, YOASOBI, Yorushika, TUYU, Ado, Hoshimachi Suisei, pinocchioP, Porter Robinson, ...</li>
+            <li><b>Anime</b>: A Silent Voice, I Want to Eat Your Pancreas, Your lie in April, 5 Centimeters per Second, Your Name, Saekano, Horimiya, Bocchi the Rock!, ...</li>
+            <li><b>Games</b>: osu!, Tetris (Tetr.io, Jstris, ...), Counter Strike, ...</li>
+            <li><b>Other</b>: Digital Minimalism, Digital Privacy, Linux/*nix Ricing, Audio stuffs, ... </li>
+        </ul>
 
-        <section class="content-section">
-            <h2>Project</h2>
-            <ul>
-                <li><a href="https://github.com/zein240px/browser-guide">Browser guide - provide tips for beginner </a>
-                <li><a href="https://github.com/zein240px/site-guide">Site guide - how to make a website</a>
-                <li><a href="https://github.com/zein240px/Pages">Design for beginner - design github website for beginner </a> 
-            </ul>
-        </section>
+        <h1>Stuffs I use/My EDC</h1>
+        <p>Last update: Mar 25 2025</p>
+        <ul>
+            <li><b>Laptop</b>: Dell Latitude 7290 (i5-7300U, 8GB DDR4, 120GB, Linux)</li>
+            <li><b>Phone</b>: Sony Xperia XZ1 (SoftBank, debloated/degoogled)</li>
+            <li><b>IEM</b>: Truthear Gate (modded damper, Spring Tips, Truthear Hexa cable)</li>
+            <li><b>Watch</b>: Casio F-91W (2 piece Zulu)</li>
+        </ul>
 
-        <!-- New section added here -->
-        <section class="content-section">
-            <h2>Social</h2>
-            <ul>
-                <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a>
-                <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a>
-                <li><a href="https://x.com/Dkhoi09">Twitter</a>
-            </ul>
-        </section>
+        <h1>Wishlist</h1>
+        <p>Last update: Mar 25 2025</p>
+        <ul>
+            <li><b>IEM</b>: Moondrop Aria</li>
+            <li><b>Mouse</b>: VXE R1 SE+</li>
+            <li><b>Keyboard</b>: Lucky65v2 + Bsun Taichi + Random keycap set</li>
+            <li><b>Other</b>: 32GB DDR4 RAM, 500GB WD SN580</li>
+        </ul>
 
-        <footer class="footer">
-            <p></p>
-        </footer>
-
-        <script>
-            let currentImage = 0; // Start with the first image
-            const images = [
-                "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif", // First image
-                "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTRwaGsyNHNrNjZzeTltZzFqNTFoYnJlY2hmZTd0NzFkZjZ2bDB6dyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Mm9enGo4CYC5O/giphy.gif"  // Second image
-            ];
-
-            function changeImage() {
-                currentImage = (currentImage + 1) % images.length; // Toggle between 0 and 1
-                document.getElementById("album-art").src = images[currentImage];
-            }
-
-            // Change image every hour (60 minutes * 60 seconds * 1000 milliseconds)
-            setInterval(changeImage, 60 * 60 * 1000);
-
-            // Initially set the first image
-            changeImage();
-        </script>
+        <h1>Inspirations</h1>
+        <ul>
+            <li><a href="https://youtube.com/@jvscholz">jvscholz</a></li>
+            <li><a href="https://loang.net/~vnpower">vnpower</a></li>
+            <li><a href="https://youtube.com/@jkwonnn">jkwonnn</a></li>
+            <li><a href="https://youtube.com/@mattdavella">Matt D'Avella</a></li>
+            <li><a href="https://reddit.com/u/Dylan112">dylanaraps</a></li>
+            <li><a href="https://youtube.com/@tunamlithobid">namthebrainless</a></li>
+        </ul>
     </body>
 </html>
