--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Introduction</h1>
         <ul>
-            <li>Hi! My name is <i>stdrice</i>. I'm a high school student, technically a <a href="https://i.imgur.com/Y6lAwVK.png">tech (or newborn) paranoid</a>/digital minimalist, otaku(?).</li>
+            <li>Hi! My name is <i>khoi</i>. I'm a secondary school student, .</li>
             <li>I love wandering around the Internet, listening to music, photo/lomography, tinkering tech stuffs, anime, manga, Japanese culture, etc.</li>
             <li>My mother tongue is Vietnamese, but I can also use English.</li>
             <li>I'm not addicted to video games anymore, but before, I played lots of different games. I have played video games since first time I used a computer (3yo). The first game I played was Counter Strike, it's still one of my favorite games.</li>
@@ -17,11 +17,11 @@
             <li>I don't use social media because I'm concerned about privacy, and the knowledge I learned from social media is very small. Someone once told me I was an ape for not using social media.</li>
         </ul>
 
-        <h1>Where to find me?</h1>
-        <p>You can contact me using any services below:</p>
+        <h1>Where to find me with any service</h1>
+        <p>some of services that i probaly use </p>
         <ul>
-            <li>My email address is <a href="mailto:stdrice@disroot.org">stdrice (at) disroot.org</a></li>
-            <li>My Discord username is <code>stdrice_</code></li>
+            <li>My email address is <i>Khoibread@gmail.com</i> </a></li>
+            <li>My Discord username is <code>hardzeic</code></li>
         </ul>
         <p>I'm also available on some platforms:</p>
         <ul>
