--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
     <body>
         <h1>Introduction</h1>
         <ul>
-            <li>Hi! My name is <i>khoi</i>. I'm a secondary school student, .</li>
-            <li>I love wandering around the Internet, listening to music, photo/lomography, tinkering tech stuffs, anime, manga, Japanese culture, etc.</li>
-            <li>My mother tongue is Vietnamese, but I can also use English.</li>
-            <li>I'm not addicted to video games anymore, but before, I played lots of different games. I have played video games since first time I used a computer (3yo). The first game I played was Counter Strike, it's still one of my favorite games.</li>
-            <li>I listen to multiple genres of music, but mostly (lofi) hip-hop, (indie/pop/alt) rock and some subgenres of electronic music.</li>
-            <li>I don't use social media because I'm concerned about privacy, and the knowledge I learned from social media is very small. Someone once told me I was an ape for not using social media.</li>
+            <li>Hi! My name is <i>khoi</i>. I'm a secondary school student and i living around the earth (Vietnam).</li>
+            <li>I passionate about coding, listening to music, photo/lomography, exploring tech stuffs, manga/anime.</li>
+            <li>Before i used to addicted to lots of game, But now I understand that I need to work hard and set goals for my life to become the best I can be.</li>
+            <li>I'm a very neat person, i'm very friendly so if you need help i will help you with all of my capacity.</li>
+            <li>I love japanese culture and interested in japanese style.</li>
         </ul>
 
-        <h1>Where to find me with any service</h1>
-        <p>some of services that i probaly use </p>
+        <h1>Where you can find me ?</h1>
+        <p>Some of services that i often use </p>
         <ul>
             <li>My email address is <i>Khoibread@gmail.com</i> </a></li>
             <li>My Discord username is <code>hardzeic</code></li>
         </ul>
-        <p>I'm also available on some platforms:</p>
+        <p>I'm also available on these social media:</p>
         <ul>
             <li><a href="https://codeberg.org/stdrice">Codeberg</a>: to host my (personal) projects</li>
             <li><a href="https://anilist.co/user/stdrice">Anilist</a>: to track my anime/manga list</li>
@@ -37,32 +36,22 @@
             <li><b>Other</b>: Digital Minimalism, Digital Privacy, Linux/*nix Ricing, Audio stuffs, ... </li>
         </ul>
 
-        <h1>Stuffs I use/My EDC</h1>
-        <p>Last update: Mar 25 2025</p>
+        <h1>Stuffs I use:</h1>
         <ul>
-            <li><b>Laptop</b>: Dell Latitude 7290 (i5-7300U, 8GB DDR4, 120GB, Linux)</li>
-            <li><b>Phone</b>: Sony Xperia XZ1 (SoftBank, debloated/degoogled)</li>
-            <li><b>IEM</b>: Truthear Gate (modded damper, Spring Tips, Truthear Hexa cable)</li>
-            <li><b>Watch</b>: Casio F-91W (2 piece Zulu)</li>
+            <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR4, 459GB, Window)</li>
+            <li><b>Phone</b>: IPhone Xs Max (to surfing the internets and do some stuff)</li>
+            <li><b>IEM</b>: Kz EDX Lite (im not modded for my IEM cuz im not a trainned professional)</li>
+            <li><b>Mice</b>: ATK F1 Pro max (not modded)</li>
+            <li><b>Keyboard</b>: Irok nd63 (already lubbed, foam, tape, i try to use lots of switchs , random japanese keycap set</li>
         </ul>
 
-        <h1>Wishlist</h1>
-        <p>Last update: Mar 25 2025</p>
-        <ul>
-            <li><b>IEM</b>: Moondrop Aria</li>
-            <li><b>Mouse</b>: VXE R1 SE+</li>
-            <li><b>Keyboard</b>: Lucky65v2 + Bsun Taichi + Random keycap set</li>
-            <li><b>Other</b>: 32GB DDR4 RAM, 500GB WD SN580</li>
-        </ul>
-
-        <h1>Inspirations</h1>
+        <h1>Inspirations/Motivation:</h1>
         <ul>
             <li><a href="https://youtube.com/@jvscholz">jvscholz</a></li>
-            <li><a href="https://loang.net/~vnpower">vnpower</a></li>
-            <li><a href="https://youtube.com/@jkwonnn">jkwonnn</a></li>
-            <li><a href="https://youtube.com/@mattdavella">Matt D'Avella</a></li>
-            <li><a href="https://reddit.com/u/Dylan112">dylanaraps</a></li>
-            <li><a href="https://youtube.com/@tunamlithobid">namthebrainless</a></li>
+            <li><a href="https://www.youtube.com/@markdarwin">markdarwin</a></li>
+            <li><a href="https://www.youtube.com/@oswinwong/featured">oswinwong</a></li>
+            <li><a href="https://www.youtube.com/@mameeewin">mameeewin</a></li>
         </ul>
+
     </body>
 </html>
