--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
             <li>My email address is <i>Khoibread@gmail.com</i> </a></li>
             <li>My Discord username is <code>hardzeic</code></li>
         </ul>
-        <p>I'm also available on these social media:</p>
+        <p>I'm also available on these platforms:</p>
         <ul>
-            <li><a href="https://codeberg.org/stdrice">Codeberg</a>: to host my (personal) projects</li>
-            <li><a href="https://anilist.co/user/stdrice">Anilist</a>: to track my anime/manga list</li>
+            <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a></li>
+            <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a></li>
+            <li><a href="https://x.com/Dkhoi09">X</a></li>
+            <li><a href="https://github.com/zein240px/">github</a>: to host my personal projects</li>
+            <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
         </ul>
 
         <h1>Interests</h1>
         <ul>
-            <li><b>Music</b>: Arctic Monkeys, Tame Impala, Nujabes, Tyler, the Creator, MF DOOM/Madvillain, Daft Punk, Lamp, YOASOBI, Yorushika, TUYU, Ado, Hoshimachi Suisei, pinocchioP, Porter Robinson, ...</li>
+            <li><b>Music</b>: Arctic Monkeys, Hisohka, Lil peep, Tyler the Creator, BAANDIT!, Keshi, Bioneunal, love.nicotine, playboi carti, Yoasobi, ... </li>
             <li><b>Anime</b>: A Silent Voice, I Want to Eat Your Pancreas, Your lie in April, 5 Centimeters per Second, Your Name, Saekano, Horimiya, Bocchi the Rock!, ...</li>
             <li><b>Games</b>: osu!, Tetris (Tetr.io, Jstris, ...), Counter Strike, ...</li>
             <li><b>Other</b>: Digital Minimalism, Digital Privacy, Linux/*nix Ricing, Audio stuffs, ... </li>
