--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <h1>Interests</h1>
         <ul>
             <li><b>Music</b>: Arctic Monkeys, Hisohka, Lil peep, Tyler the Creator, BAANDIT!, Keshi, Bioneunal, love.nicotine, playboi carti, Yoasobi, ... </li>
-            <li><b>Anime</b>: A Silent Voice, I Want to Eat Your Pancreas, Your lie in April, 5 Centimeters per Second, Your Name, Saekano, Horimiya, Bocchi the Rock!, ...</li>
-            <li><b>Games</b>: osu!, Tetris (Tetr.io, Jstris, ...), Counter Strike, ...</li>
+            <li><b>Anime</b>: A Silent Voice, Bleach, Your lie in April, Saitama, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
+            <li><b>Games</b>: osu!, Valorant, Counter Strike, Apex legend, ...</li>
             <li><b>Other</b>: Digital Minimalism, Digital Privacy, Linux/*nix Ricing, Audio stuffs, ... </li>
         </ul>
 
