--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
         <h1>Interests</h1>
         <ul>
             <li><b>Music</b>: Arctic Monkeys, Hisohka, Lil peep, Tyler the Creator, BAANDIT!, Keshi, Bioneunal, love.nicotine, playboi carti, Yoasobi, ... </li>
-            <li><b>Anime</b>: A Silent Voice, Bleach, Your lie in April, Saitama, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
+            <li><b>Anime</b>: A Silent Voice, Bleach, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
             <li><b>Games</b>: osu!, Valorant, Counter Strike, Apex legend, ...</li>
-            <li><b>Other</b>: Digital Minimalism, Digital Privacy, Linux/*nix Ricing, Audio stuffs, ... </li>
+            <li><b>Other</b>:  ... </li>
         </ul>
 
         <h1>Stuffs I use:</h1>
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR4, 459GB, Window)</li>
-            <li><b>Phone</b>: IPhone Xs Max (to surfing the internets and do some stuff)</li>
-            <li><b>IEM</b>: Kz EDX Lite (im not modded for my IEM cuz im not a trainned professional)</li>
-            <li><b>Mice</b>: ATK F1 Pro max (not modded)</li>
-            <li><b>Keyboard</b>: Irok nd63 (already lubbed, foam, tape, i try to use lots of switchs , random japanese keycap set</li>
+            <li><b>Phone</b>: IPhone Xs Max (to surfing the internets, do miscellaneous things, programme code, debloated)</li>
+            <li><b>IEM</b>: Kz EDX Lite (Im not modded for my IEM causse im not professional)</li>
+            <li><b>Mice</b>: ATK F1 Pro max (im not a professional so im not do anything with my mouse)</li>
+            <li><b>Keyboard</b>: Irok nd63 (already lubbed, foam, mod tape, i try to use lots of switchs , random japanese keycap set)</li>
         </ul>
 
         <h1>Inspirations/Motivation:</h1>
@@ -54,6 +54,7 @@
             <li><a href="https://www.youtube.com/@markdarwin">markdarwin</a></li>
             <li><a href="https://www.youtube.com/@oswinwong/featured">oswinwong</a></li>
             <li><a href="https://www.youtube.com/@mameeewin">mameeewin</a></li>
+            <li><a href="https://www.youtube.com/@masked_mediator">Masked Mediator</a></li>
         </ul>
 
     </body>
